# child-health-evaluate-upload

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
client/page/: AbstractClient.py  BrowserClient.py  ChromeClient.py  SimulationInputer.py
client/system/: SystemClient.py
client/system/access/: AbstractServerAccess.py  RequestServerAccess.py
entity/: InspectInfo.py  UploadStatus.py
exception/: DatumMissingException.py  UnknownException.py
exception/upload/: ChildInfoIsNotExist.py  InspectInfoIsAlreadyUploaded.py  UploadDatumException.py
logger/: AbstractLogger.py  ConsoleLogger.py  __init__.py
